--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -173,8 +173,8 @@
         flex-direction: column;
         cursor: pointer;
         z-index: 100;
-        margin-left: 1.5rem;
-
+        margin-left: 2rem;
+        padding: .125rem;
         border: none !important;
         outline: none !important;
         background-color: transparent !important;
