fix: referral page

--- a/src/styles/sass/page/_referral.scss
+++ b/src/styles/sass/page/_referral.scss
@@ -53,3 +53,15 @@ div.bg-gray-50 {
         height: 56px;
     }
 }
+
+.referral-wallet {
+    margin-bottom: 40px;
+}
+
+.social-link:hover {
+    opacity: 1;
+}
+
+.social-link {
+    opacity: 0.3;
+}
