--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -392,11 +392,13 @@
 }
 
 .destination_wallet {
+    width: 100%;
     height: 200px;
     padding: 20px;
     border: 1px solid white;
     color: white;
     transition: 0.3s;
+    background-color: transparent;
     cursor: pointer;
     opacity: 0.7;
     .wallet_header {
@@ -427,6 +429,10 @@
     &:hover {
         border: 1px solid #23c865;
         opacity: 1;
+    }
+    &:disabled {
+        border: 1px solid;
+        opacity: 0.7;
     }
 }
 
