Fixed the style issue of dress-up modal in mobile version

--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -330,6 +330,18 @@
             }
         }
     }
+
+    .dropdown {
+        ul.dropdown-menu {
+            min-width: rem;
+            background-color: $black;
+            border: 1px solid white;
+            padding: 10px;
+            li {
+                line-height: 36px;
+            }
+        }
+    }
 }
 
 .header-avatar-user-tier {
