--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -694,6 +694,12 @@
     padding: 0;
     border: unset;
 
+    @include mq('phone', max) {
+        width: 100vw;
+        height: 100vh;
+        overflow: auto;
+    }
+
     div.profile {
         margin: auto;
         border: none;
@@ -864,7 +870,7 @@
     }
     .react-tabs__tab {
         width: 33.3%;
-        font-size: 14px;
+        font-size: 10px;
         font-weight: bold;
         text-align: center;
         text-transform: uppercase;
