--- a/src/styles/sass/utils/_variables.scss
+++ b/src/styles/sass/utils/_variables.scss
@@ -17,6 +17,7 @@ $disableGray: #5E5E5E;
 $priceGray: #787878;
 $transparent: transparent;
 
+$footerHeight: 80px;
 
 // Media query breakpoints
 $breakpoints: (
