--- a/src/styles/sass/layout/_layout.scss
+++ b/src/styles/sass/layout/_layout.scss
@@ -1,8 +1,6 @@
 .footer-bar {
-    position: fixed;
-    bottom: 0;
     width: 100%;
-    height: 80px;
+    height: $footerHeight;
     background: transparent;
     font-size: 12px;
     z-index: 1030;
@@ -10,7 +8,6 @@
         font-size: 10px;
     }
     @include mq('tablet', max) {
-        position: relative;
         height: auto;
     }
 }
