--- a/src/styles/sass/page/_home.scss
+++ b/src/styles/sass/page/_home.scss
@@ -7,7 +7,7 @@
     .home-section {
         text-align: center;
         background: #1e1e1e;
-        height: calc(100vh - 100px);
+        height: calc(100vh - 100px - $footerHeight);
         @include mq("tablet", max) {
             height: calc(100vh - 175px);
         }
