--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -439,7 +439,7 @@
         width: 70%;
         margin: auto;
     }
-    @include mq("phone", max) {
+    @include mq("tablet", max) {
         .width1,
         .width2,
         .width3,
@@ -456,7 +456,7 @@
         min-height: 400px;
     }
     .min_height2 {
-        min-height: 550px;
+        min-height: 500px;
     }
     div.deposit {
         margin: auto;
@@ -680,9 +680,75 @@
                 }
             }
         }
+    }
+    .connect-wallet {
+        min-height: 360px;
+        text-align: center;
+        color: white;
+        .row {
+            margin-top: 40px;
+            @include mq("laptop", max) {
+                margin-top: 24px;
+            }
+            .connected {
+                border: 1px solid #23c865;
+                padding: 10px;
+                p {
+                    color: #23c865;
+                    margin: 10px 0;
+                    word-break: break-all;
+                }
+                img {
+                    margin: 25px 0;
+                    width: 70px;
+                }
+            }
+        }
         .col-sm-6 {
-            padding-left: 1%;
-            padding-right: 1%;
+            margin-bottom: 16px;
+        }
+        .wallet-item {
+            cursor: pointer;
+            width: 100%;
+            height: 100%;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            border: 2px solid white;
+            img {
+                margin-bottom: 16px;
+                width: 50px;
+                height: 50px;
+                @include mq("phone", max) {
+                    width: 32px;
+                    height: 32px;
+                }
+            }
+            p {
+                font-size: 13px;
+                line-height: 20px;
+                color: white;
+            }
+            &.inactive {
+                border-color: grey;
+                p {
+                    color: grey;
+                }
+                img {
+                    opacity: 0.5;
+                }
+            }
+        }
+        .btn-primary {
+            margin-top: 35px;
+            font-size: 24px;
+            line-height: 29px;
+            padding: 7px 92px;
+            @include mq("laptop", max) {
+                margin-top: 24px;
+            }
+            @include mq("phone", max) {
+                width: 100%;
+            }
         }
     }
     .bankDetail {
