Fixed the style issue of withdraw modal

--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -644,6 +644,7 @@
                     .topic,
                     .content {
                         width: 100%;
+                        word-break: break-all;
                     }
                 }
             }
