--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -292,6 +292,9 @@
         line-height: 29px;
         text-transform: uppercase;
         color: white;
+        @include mq("tablet", max) {
+            font-size: 16px;
+        }
     }
     .range-input,
     .total-input {
@@ -311,6 +314,9 @@
         font-weight: bold;
         font-size: 30px;
         line-height: 37px;
+        @include mq("tablet", max) {
+            font-size: 22px;
+        }
     }
     .symbol-label {
         color: $green;
