--- a/src/styles/sass/page/purchase/auction.scss
+++ b/src/styles/sass/page/purchase/auction.scss
@@ -418,6 +418,11 @@ div.slider-container {
         border-color: #23c865;
         background-color: #23c865;
         margin-top: -10px;
+        @include mq('phone', max) {
+            width: 18px;
+            height: 18px;
+            margin-top: -7px;
+        }
     }
     @media screen and (max-width: 768px) {
         flex-direction: column;
