--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -113,6 +113,7 @@
                 }
             }
         }
+
         .social-links {
             display: flex;
             justify-content: center;
@@ -366,4 +367,7 @@
 .errorsapn {
     color: rgb(231, 54, 54);
     font-size: 14px;
+}
+.btn.noBorder {
+    border: none;
 }
