--- a/src/styles/sass/utils/_variables.scss
+++ b/src/styles/sass/utils/_variables.scss
@@ -16,6 +16,7 @@ $grannyApple: #d6f5dd;
 $disableGray: #5E5E5E;
 $priceGray: #787878;
 $transparent: transparent;
+$white: #ffffff;
 
 $footerHeight: 80px;
 
