--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -2,7 +2,7 @@
 @import "utils/mixins";
 @import "utils/placeholders";
 
-@import "~bootstrap/scss/bootstrap";
+@import "bootstrap";
 
 @import "base/base";
 @import "base/reset";
