--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -14,6 +14,7 @@
 @import "components/menu";
 @import "components/accordion";
 @import "components/loading";
+@import "components/support-modal"; // Added missing support modal styles
 @import "components/admin/leftBar";
 
 @import "layout/layout";
